fix align title and check box

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,8 +6,8 @@ ion-toolbar{
   color:#FFFFFF;//text change color
   --background:#FF8040;
 }
-ion-header.ion-title{
-  align-items: center;
+ion-title{
+  text-align:center;
 }
 ion-content{
   --background:#FFEBE8;
